2001-01-24  Mark Elbrecht  <snowball3@bigfoot.com>

	* ieee.c: Update copyright.
	(ieee_start_compilation_unit): Don't check for backslashes
	unless HAVE_DOS_BASED_FILE_SYSTEM is defined.

	* stabs.c: Update copyright. Include "filenames.h".
	(parse_stab): Use IS_ABSOLUTE_PATH. Ignore N_WARNING stabs.

2001-01-23  Jakub Jelinek  <jakub@redhat.com>

	* readelf.c (process_version_sections): Check if VERDEF or VERNEED
	sections are present before using them.  Remove code duplication.
	(process_symbol_table): Check if VERDEF or VERNEED sections are
	present before using them.

2001-01-17  Nick Clifton  <nickc@redhat.com>

	* objcopy.c (copy_object): Fail if attempting to convert the
	endianness of the input object file.

	* binutils.texi: Explain that objcopy cannot convert endianness.

2001-01-16  Nick Clifton  <nickc@redhat.com>

	* readelf.c (string_table_length): New variable.
	(SECTION_NAME): Catch out of range indices and missing section
	pointers.
	(process_section_headers): Delete useless local variable
	string_table_offset.  Set the value of string_table_length
	after loading the string table.
	(process_mips_specific): Use SECTION_NAME macro.
	(process_file): Set string_table_length to 0 when it is freed.

2001-01-12  Nick Clifton  <nickc@redhat.com>

	* version.c (print_version): Update copyright date.

2001-01-11  Peter Targett  <peter.targett@arccores.com>

	* readelf.c (dump_relocations): Include selection with EM_ARC.
	(get_machine_name) Update name to "ARC".

2001-01-09  Nick Clifton  <nickc@redhat.com>

	* Makefile.am: Add rule to build objdump.o from objdump.c and
	using OBJDUMP_DEFS.
	* Makefile.in: Regenerate.

	* configure.in: Define OBJDUMP_DEFS.  Default to empty.
	(arm, xscale, d10v): For these targets define OBJDUMP_DEFS to
	-DDISASSEMBLER_NEEDS_RELOCS.
	* configure: Regenerate.

	* objdump.c (disassemble_bytes): If DISASSEMBLER_NEEDS_RELOCS
	is defined read in the relocs even if dump_reloc_info is
	false.
